tests/errors/test_41.x
// Unknown enum key

enum Boolean -> { TRUE, FALSE }

fn main() -> void {
    let x: Boolean = Boolean.MAYBE;
}